--- a/alacritty/Cargo.toml
+++ b/alacritty/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "alacritty"
-version = "0.13.1-rc1"
+version = "0.13.1"
 authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
 license = "Apache-2.0"
 description = "A fast, cross-platform, OpenGL terminal emulator"
@@ -11,7 +11,7 @@ rust-version = "1.70.0"
 
 [dependencies.alacritty_terminal]
 path = "../alacritty_terminal"
-version = "0.21.0-rc1"
+version = "0.21.0"
 
 [dependencies.alacritty_config_derive]
 path = "../alacritty_config_derive"
@@ -19,7 +19,7 @@ version = "0.2.2"
 
 [dependencies.alacritty_config]
 path = "../alacritty_config"
-version = "0.2.0-rc1"
+version = "0.2.0"
 
 [dependencies]
 ahash = { version = "0.8.6", features = ["no-rng"] }
