--- a/alacritty/Cargo.toml
+++ b/alacritty/Cargo.toml
@@ -34,10 +34,12 @@ libc = "0.2"
 log = { version = "0.4", features = ["std", "serde"] }
 notify = "6.1.1"
 parking_lot = "0.12.0"
-serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.9.25"
+tempfile = "3.12.0"
 toml = "0.8.2"
+toml_edit = "0.22.21"
 unicode-width = "0.1"
 winit = { version = "0.30.4", default-features = false, features = ["rwh_06", "serde"] }
 
