--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ members = [
 ]
 resolver = "2"
 
+[workspace.package]
+edition = "2021"
+rust-version = "1.81.0"
+
 [profile.release]
 lto = "thin"
 debug = 1
