--- a/alacritty_config/Cargo.toml
+++ b/alacritty_config/Cargo.toml
@@ -6,8 +6,8 @@ license = "MIT OR Apache-2.0"
 description = "Alacritty configuration abstractions"
 homepage = "https://alacritty.org"
 repository = "https://github.com/alacritty/alacritty"
-edition = "2021"
-rust-version = "1.74.0"
+edition.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 log = { version = "0.4.17", features = ["serde"] }
