--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ rust-version = "1.85.0"
 lto = "thin"
 debug = 1
 incremental = false
+
+[workspace.dependencies]
+toml = "0.9.2"
+toml_edit = "0.23.1"
