--- a/alacritty/Cargo.toml
+++ b/alacritty/Cargo.toml
@@ -38,8 +38,8 @@ serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 serde_yaml = "0.9.25"
 tempfile = "3.12.0"
-toml = "0.8.2"
-toml_edit = "0.22.21"
+toml.workspace = true
+toml_edit.workspace = true
 unicode-width = "0.2.0"
 winit = { version = "0.30.9", default-features = false, features = ["rwh_06", "serde"] }
 
