Disable NSAutoFillHeuristicController on macOS

--- a/alacritty/Cargo.toml
+++ b/alacritty/Cargo.toml
@@ -61,6 +61,7 @@ objc2-foundation = { version = "0.3.1", default-features = false, features = [
     "std",
     "NSString",
     "NSLocale",
+    "NSUserDefaults",
 ] }
 objc2-app-kit = { version = "0.3.1", default-features = false, features = [
     "std",
