refactor (winit): migrate to winit 0.31 event architecture
## Event System
- Replace typed `EventLoop<Event>` with `mpsc::channel` + `EventLoopProxy::wake_up()` for cross-thread communication
- Replace `ApplicationHandler::user_event()` with `proxy_wake_up()` draining the channel receiver
- Move window creation from `new_events(StartCause::Init)` to `can_create_surfaces()` lifecycle callback
- Decouple `Scheduler` from `EventLoopProxy`, returning fired events as `Vec<Event>` inline
- Rewrite `EventProxy` to wrap both `mpsc::Sender<Event>` and `EventLoopProxy`
- Propagate sender/proxy pair through IPC, config monitor, logging, and PTY subsystems

## API Migrations
- Unify mouse and touch under pointer events (`PointerButton`, `PointerMoved`, `PointerLeft`)
- Rename `inner_size`/`Resized` to `surface_size`/`SurfaceResized` throughout
- Rename `ModifiersState::SUPER` to `META` and `NamedKey::Super` to `Meta`
- Migrate IME from individual setters to unified `request_ime_update()` with `ImeRequest` enum
- Use trait objects for `Window` (`Box<dyn WinitWindow>`) and `ActiveEventLoop` (`&dyn ActiveEventLoop`)
- Replace `DroppedFile`/`HoveredFile` with `DragDropped`/`DragEntered`/`DragMoved`/`DragLeft`
- Move keyboard text accessors from methods to fields (`text_with_all_modifiers`, `key_without_modifiers`)

## Dependencies
- Upgrade winit 0.30.12 -> 0.31.0-beta.2 (git fork: earthlings-dev/winit)
- Upgrade crossfont 0.8.1 -> 0.9.0 (git fork: earthlings-dev/crossfont)
- Bump MSRV from 1.85.0 to 1.93.0 for let-chain syntax support
- Update bitflags 2.9.4 -> 2.11.0, windows-sys 0.59.0 -> 0.61.2, calloop 0.13 -> 0.14
- Update smithay-client-toolkit 0.19 -> 0.20, sctk-adwaita 0.10 -> 0.11, toml 0.9 -> 1.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,11 @@ members = [
     "alacritty_config",
     "alacritty_config_derive",
 ]
-resolver = "2"
+resolver = "3"
 
 [workspace.package]
 edition = "2024"
-rust-version = "1.85.0"
+rust-version = "1.93"
 
 [profile.release]
 lto = "thin"
@@ -17,5 +17,9 @@ debug = 1
 incremental = false
 
 [workspace.dependencies]
-toml = "0.9.11"
-toml_edit = "0.24.0"
+toml = "1.0.2"
+toml_edit = "0.25.2"
+
+[patch.crates-io]
+winit = { git = "https://github.com/earthlings-dev/winit.git", branch = "master" }
+crossfont = { git = "https://github.com/earthlings-dev/crossfont.git", branch = "master" }
