--- a/alacritty/Cargo.toml
+++ b/alacritty/Cargo.toml
@@ -23,47 +23,47 @@ path = "../alacritty_config"
 version = "0.2.4-dev"
 
 [dependencies]
-ahash = { version = "0.8.6", features = ["no-rng"] }
-bitflags = "2.2.1"
-clap = { version = "4.2.7", features = ["derive", "env"] }
-copypasta = { version = "0.10.1", default-features = false }
-crossfont = "0.8.1"
-glutin = { version = "0.32.2", default-features = false, features = ["egl", "wgl"] }
-home = "0.5.5"
+ahash = { version = "0.8.12", features = ["no-rng"] }
+bitflags = "2.11.0"
+clap = { version = "4.5.59", features = ["derive", "env"] }
+copypasta = { version = "0.10.2", default-features = false }
+crossfont = "0.9.0"
+glutin = { version = "0.32.3", default-features = false, features = ["egl", "wgl"] }
+home = "0.5.12"
 libc = "0.2"
 log = { version = "0.4", features = ["std", "serde"] }
-notify = "8.0.0"
-parking_lot = "0.12.0"
+notify = "8.2.0"
+parking_lot = "0.12.5"
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
-serde_yaml = "0.9.25"
-tempfile = "3.12.0"
+serde_yaml = "0.9.34"
+tempfile = "3.25.0"
 toml.workspace = true
 toml_edit.workspace = true
-unicode-width = "0.2.0"
-winit = { version = "0.30.9", default-features = false, features = ["rwh_06", "serde"] }
+unicode-width = "0.2.2"
+winit = { version = "0.31.0-beta.2", default-features = false, features = ["serde"] }
 
 [build-dependencies]
 gl_generator = "0.14.0"
 
 [dev-dependencies]
-clap_complete = "4.2.3"
+clap_complete = "4.5.66"
 
 [target.'cfg(not(windows))'.dependencies]
 xdg = "3.0.0"
 
 [target.'cfg(not(target_os = "macos"))'.dependencies]
-png = { version = "0.17.5", default-features = false, optional = true }
+png = { version = "0.18.1", default-features = false, optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
-objc2 = "0.6.1"
-objc2-foundation = { version = "0.3.1", default-features = false, features = [
+objc2 = "0.6.3"
+objc2-foundation = { version = "0.3.2", default-features = false, features = [
     "std",
     "NSString",
     "NSLocale",
     "NSUserDefaults",
 ] }
-objc2-app-kit = { version = "0.3.1", default-features = false, features = [
+objc2-app-kit = { version = "0.3.2", default-features = false, features = [
     "std",
     "NSColorSpace",
     "NSResponder",
@@ -73,7 +73,7 @@ objc2-app-kit = { version = "0.3.1", default-features = false, features = [
 
 [target.'cfg(windows)'.dependencies]
 dirs = "6.0.0"
-windows-sys = { version = "0.59", features = [
+windows-sys = { version = "0.61", features = [
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_Threading",
     "Win32_System_Console",
@@ -81,7 +81,7 @@ windows-sys = { version = "0.59", features = [
 ]}
 
 [target.'cfg(windows)'.build-dependencies]
-embed-resource = "3.0.2"
+embed-resource = "3.0.6"
 
 [features]
 default = ["wayland", "x11"]
